projects/compiler/test/typechecker/typedecl/error_trait_impl_duplicate.out
Error at %TEST_DIR%/typechecker/typedecl/error_trait_impl_duplicate.abra:2:17
Duplicate trait in implementations list
  |  type Bar : Foo, Foo {}
                     ^

Error at %TEST_DIR%/typechecker/typedecl/error_trait_impl_duplicate.abra:6:24
Duplicate trait in implementations list
  |  type Bar2 : Foo2<Int>, Foo2<Float> {}
                            ^
