projects/compiler/test/typechecker/typedecl/error_trait_impl_duplicate.abra
trait Foo {}
type Bar : Foo, Foo {}

// A trait is considered duplicated regardless of the provided generics
trait Foo2<A> {}
type Bar2 : Foo2<Int>, Foo2<Float> {}